--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
     <div class="carousel-item active">
       <img src="okonomiyaki.png" alt="Los Angeles" class="d-block" style="width:100%">
       <div class="carousel-caption">
-        <h3>Los Angeles</h3>
+        <h3>Jääkarhu</h3>
         <p>We had such a great time in LA!</p>
       </div>
     </div>
     <div class="carousel-item">
       <img src="pen-and-paper.png" alt="Chicago" class="d-block" style="width:100%">
       <div class="carousel-caption">
-        <h3>Chicago</h3>
+        <h3>Pingviini</h3>
         <p>Thank you, Chicago!</p>
       </div> 
     </div>
@@ -74,14 +74,14 @@
     <div class="carousel-item">
       <img src="ny.jpg" alt="New York" class="d-block" style="width:100%">
       <div class="carousel-caption">
-        <h3>New York</h3>
+        <h3>Hylje</h3>
         <p>We love the Big Apple!</p>
       </div>  
     </div>
     <div class="carousel-item">
       <img src="ny.jpg" alt="New York" class="d-block" style="width:100%">
       <div class="carousel-caption">
-        <h3>New York</h3>
+        <h3>Mursu</h3>
         <p>We love the Big Apple!</p>
       </div>  
     </div>
