--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <nav class="navbar navbar-expand-sm navbar-custom">
   <div class="container-fluid">
     <!--brändin nimi ja logo-->
-    <a class="navbar-brand navbar-text" href="logo.jpeg">Logo</a>
+    <a class="navbar-brand navbar-text" href="ArcticLife/logo.jpeg">Logo</a>
     <!--mobiili navigointi eli hampurilaisvalikko-->
     <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
       <span class="navbar-toggler-icon"></span>
@@ -57,16 +57,16 @@
   <!-- The slideshow/carousel -->
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="okonomiyaki.png" alt="Los Angeles" class="d-block" style="width:100%">
+      <img src="polarbear.jpg" alt="Los Angeles" class="d-block" style="width:100%">
       <div class="carousel-caption">
         <h3>Jääkarhu</h3>
         <p>We had such a great time in LA!</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="pen-and-paper.png" alt="Chicago" class="d-block" style="width:100%">
+      <img src="penquin.jpg" alt="Chicago" class="d-block" style="width:100%">
       <div class="carousel-caption">
-        <h3>Pingviini</h3>
+        <h3>Pngviini</h3>
         <p>Thank you, Chicago!</p>
       </div> 
     </div>
@@ -74,14 +74,14 @@
     <div class="carousel-item">
       <img src="ny.jpg" alt="New York" class="d-block" style="width:100%">
       <div class="carousel-caption">
-        <h3>Hylje</h3>
+        <h3>New York</h3>
         <p>We love the Big Apple!</p>
       </div>  
     </div>
     <div class="carousel-item">
       <img src="ny.jpg" alt="New York" class="d-block" style="width:100%">
       <div class="carousel-caption">
-        <h3>Mursu</h3>
+        <h3>New York</h3>
         <p>We love the Big Apple!</p>
       </div>  
     </div>
