kuvat ja niiden omistajat

--- a/index.html
+++ b/index.html
@@ -60,32 +60,30 @@
       <img src="polarbear.jpg" alt="Los Angeles" class="d-block" style="width:100%">
       <div class="carousel-caption">
         <h3>Jääkarhu</h3>
-        <p>We had such a great time in LA!</p>
+        <p>Kuva <a href="https://pixabay.com/fi/users/pascalphotography360-22728048/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=9156395">Pascal Arnould</a> Pixabaystä</p>
       </div>
     </div>
     <div class="carousel-item">
       <img src="penquin.jpg" alt="Chicago" class="d-block" style="width:100%">
       <div class="carousel-caption">
-        <h3>Pngviini</h3>
-        <p>Thank you, Chicago!</p>
+        <h3>Pingviini</h3>
+        <p>Kuva: Kuva <a href="https://pixabay.com/fi/users/theotherkev-9436196/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=4337057">Kev</a> Pixabaystä</p>
       </div> 
     </div>
-    <!--
     <div class="carousel-item">
-      <img src="ny.jpg" alt="New York" class="d-block" style="width:100%">
+      <img src="mursu.jpeg" alt="New York" class="d-block" style="width:100%">
       <div class="carousel-caption">
-        <h3>New York</h3>
-        <p>We love the Big Apple!</p>
+        <h3>Mursu</h3>
+        <p>Kuva <a href="https://pixabay.com/fi/users/publicdomainimages-327722/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=387243">PublicDomainImages</a> Pixabaystä</p>
       </div>  
     </div>
     <div class="carousel-item">
-      <img src="ny.jpg" alt="New York" class="d-block" style="width:100%">
+      <img src="naali.jpg" alt="New York" class="d-block" style="width:100%">
       <div class="carousel-caption">
-        <h3>New York</h3>
-        <p>We love the Big Apple!</p>
+        <h3>Naali</h3>
+        <p>Kuva <a href="https://pixabay.com/fi/users/pexels-2286921/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=1850247">Pexels</a> Pixabaystä</p>
       </div>  
     </div>
-    --!>
   </div>
   
   <!-- Left and right controls/icons -->
