--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <nav class="navbar navbar-expand-sm navbar-custom">
   <div class="container-fluid">
     <!--brändin nimi ja logo-->
-    <a class="navbar-brand navbar-text" href="ArcticLife/logo.jpeg">Logo</a>
+    <a class="navbar-brand navbar-text" href="logo.jpeg">Logo</a>
     <!--mobiili navigointi eli hampurilaisvalikko-->
     <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
       <span class="navbar-toggler-icon"></span>
@@ -52,33 +52,34 @@
     <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
     <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
     <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+    <button type="button" data-bs-target="#demo" data-bs-slide-to="3"></button>
   </div>
   
   <!-- The slideshow/carousel -->
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="polarbear.jpg" alt="Los Angeles" class="d-block" style="width:100%">
+      <img src="polarbear.jpg" alt="Jääkarhu" class="d-block" style="width:100%">
       <div class="carousel-caption">
         <h3>Jääkarhu</h3>
         <p>Kuva <a href="https://pixabay.com/fi/users/pascalphotography360-22728048/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=9156395">Pascal Arnould</a> Pixabaystä</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="penquin.jpg" alt="Chicago" class="d-block" style="width:100%">
+      <img src="penquin.jpg" alt="Pingviini" class="d-block" style="width:100%">
       <div class="carousel-caption">
         <h3>Pingviini</h3>
         <p>Kuva: Kuva <a href="https://pixabay.com/fi/users/theotherkev-9436196/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=4337057">Kev</a> Pixabaystä</p>
       </div> 
     </div>
     <div class="carousel-item">
-      <img src="mursu.jpeg" alt="New York" class="d-block" style="width:100%">
+      <img src="mursu.jpg" alt="Mursu" class="d-block" style="width:100%">
       <div class="carousel-caption">
         <h3>Mursu</h3>
         <p>Kuva <a href="https://pixabay.com/fi/users/publicdomainimages-327722/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=387243">PublicDomainImages</a> Pixabaystä</p>
       </div>  
     </div>
     <div class="carousel-item">
-      <img src="naali.jpg" alt="New York" class="d-block" style="width:100%">
+      <img src="naali.jpg" alt="Naali" class="d-block" style="width: 100%">
       <div class="carousel-caption">
         <h3>Naali</h3>
         <p>Kuva <a href="https://pixabay.com/fi/users/pexels-2286921/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=1850247">Pexels</a> Pixabaystä</p>
