--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <nav class="navbar navbar-expand-sm navbar-custom">
   <div class="container-fluid">
     <!--brändin nimi ja logo-->
-    <a class="navbar-brand navbar-text" href="logo.jpeg">Logo</a>
+    <a class="navbar-brand navbar-text" href="#"><img src="logo.jpeg" alt="Logo"></a>
     <!--mobiili navigointi eli hampurilaisvalikko-->
     <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
       <span class="navbar-toggler-icon"></span>
