--- a/index.html
+++ b/index.html
@@ -99,9 +99,10 @@
 <!--grid, eli kolmesarakkeinen osio sivustolla-->
 <div class="container">    
 <div class="row">
-<div class="col-md-4">1. palstan sisältö (kuva)</div>
-<div class="col-md-4">2. palstan sisältö (teksti)</div>
-<div class="col-md-4">3. palstan sisältö (kuva)</div>
+<div class="col-md-4"><img id="kuva1" src="maisema1.jpg"><p>Kuva <a href="https://pixabay.com/fi/users/per804-874554/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=5126442">Per Løvstad Pixabaystä</a></p></div>
+<div class="col-md-4"><p>Arktinen alue eli Arktis tarkoittaa maapallon pohjoisimpia alueita. Tavallisesti arktiseen alueeseen katsotaan kuuluvan pohjoisnapaa ympäröivä Pohjoinen jäämeri ja osia Kanadasta, Grönlannista, Venäjästä, Alaskasta ja Pohjoismaista.</p>
+</div>
+<div class="col-md-4"><img id="kuva2" src="lappi.jpg"><p>Kuva <a href="https://pixabay.com/fi/users/aileino-1030590/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=993002">AI Leino</a> Pixabaystä</p></div>
 </div> 
 </div>
 
