--- a/index.html
+++ b/index.html
@@ -99,15 +99,62 @@
 <!--grid, eli kolmesarakkeinen osio sivustolla-->
 <div class="container">    
 <div class="row">
-<div class="col-md-4"><img id="kuva1" src="maisema1.jpg"><p>Kuva <a href="https://pixabay.com/fi/users/per804-874554/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=5126442">Per Løvstad Pixabaystä</a></p></div>
+<div class="col-md-4"><img id="kuva1" src="maisema1.jpg">Kuva <a href="https://pixabay.com/fi/users/per804-874554/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=5126442">Per Løvstad</a> Pixabaystä</div>
 <div class="col-md-4"><p>Arktinen alue eli Arktis tarkoittaa maapallon pohjoisimpia alueita. Tavallisesti arktiseen alueeseen katsotaan kuuluvan pohjoisnapaa ympäröivä Pohjoinen jäämeri ja osia Kanadasta, Grönlannista, Venäjästä, Alaskasta ja Pohjoismaista.</p>
 </div>
-<div class="col-md-4"><img id="kuva2" src="lappi.jpg"><p>Kuva <a href="https://pixabay.com/fi/users/aileino-1030590/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=993002">AI Leino</a> Pixabaystä</p></div>
+<div class="col-md-4"><img id="kuva2" src="lappi.jpg">Kuva <a href="https://pixabay.com/fi/users/aileino-1030590/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=993002">AI Leino</a> Pixabaystä</div>
 </div> 
 </div>
+<div>
+  <form onsubmit="return false">
+  <label for ="nimi">Nimi:</label><br>
+<input type="text" id="nimi" size="20" required maxlength="50"><br>
+<label for="email">Sähköposti:</label><br>
+<input type="email" id="email" size="20"><br>
+<label type="text" for="numero">Puh.numero:</label><br>
+<input type="tel" id="numero" size="20"><br>
+<label for="viesti">Viesti:</label><br>
+<textarea id="viesti"></textarea>
+<!--radiobutton-->
+<div>Mitä haluaisit sivustolle lisää?</div>
+<label>
+  <input type="radio"  name="lisaa" value="Kuvia">Kuvia
+</label><br>
+<label>
+  <input type="radio"  name="lisaa" value="Tietoa">Tietoa useammista eläimistä
+</label><br>
+<label>
+  <input type="radio"  name="lisaa" value="Videoita">Videoita
+</label><br>
+<!--checkboxit-->
+<div>Mitä ajatuksia sivusto herättää?</div>
+<label>
+  <input type="checkbox"  name="tama" value="kiinnostavaa">Kiinnostavaa
+</label><br>
+<label>
+  <input type="checkbox"  name="tama" value="tylsää">Tylsää
+</label><br>
+<label>
+  <input type="checkbox"  name="tama" value="muuta">Jotain muuta
+</label>
+<!--Alasvetovalikko-->
+<div>Löysitkö etsimäsi:</div>
+<select id="tieto">
+  <option value="tyhjä"></option>
+  <option value="en">En</option>
+  <option value="ehkä">Ehkä</option>
+  <option value="kyllä">Kyllä</option>
+  <option value="en kerro">En halua kertoa</option>
+</select>
+<br>
 
+<input type="submit" value="Lähetä" onclick="lomake()">
+</form>
+  <div id="vastaus"></div>
+</div>
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
