navipalkin kiinnitys ja seuraava navigointi

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body data-bs-spy="scroll" data-bs-target=".navbar" data-bs-offset="50">
     <!--navipalkki alkaa-->
-<nav class="navbar navbar-expand-sm navbar-custom poppins-semibold">
+<nav class="navbar navbar-expand-sm navbar-custom fixed-top poppins-semibold">
   <div class="container-fluid">
     <!--brändin nimi ja logo-->
     <a class="navbar-brand navbar-text" href="#"><img src="logo.jpeg" alt="Logo">Elämää jäällä</a>
@@ -99,7 +99,7 @@
 <!--grid, eli kolmesarakkeinen osio sivustolla-->
 <div class="container poppins-regular" id="arktis">    
 <div class="row">
-<div class="col-md-4"><img id="kuva1" src="maisema1.jpg">Kuva <a href="https://pixabay.com/fi/users/per804-874554/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=5126442">Per Løvstad</a> Pixabaystä</div>
+<div class="col-md-4 poppins-extralight"><img id="kuva1" src="maisema1.jpg">Kuva <a href="https://pixabay.com/fi/users/per804-874554/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=5126442">Per Løvstad</a> Pixabaystä</div>
 <div class="col-md-4"><p>Arktinen alue eli Arktis tarkoittaa maapallon pohjoisimpia alueita. Tavallisesti arktiseen alueeseen katsotaan kuuluvan pohjoisnapaa ympäröivä Pohjoinen jäämeri ja osia Kanadasta, Grönlannista, Venäjästä, Alaskasta ja Pohjoismaista.</p>
 </div>
 <div class="col-md-4"><img id="kuva2" src="lappi.jpg">Kuva <a href="https://pixabay.com/fi/users/aileino-1030590/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=993002">AI Leino</a> Pixabaystä</div>
