--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
       <img src="polarbear.jpg" alt="Jääkarhu" class="d-block" style="width:100%">
       <div class="carousel-caption">
         <h3>Jääkarhu</h3>
+        <p>Tämä arktisen aleen karhulaji on sopeutunut elämään äärimmäisen kylmissä olosuhteissa.</p>
         <p>Kuva <a href="https://pixabay.com/fi/users/pascalphotography360-22728048/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=9156395">Pascal Arnould</a> Pixabaystä</p>
       </div>
     </div>
@@ -75,6 +76,7 @@
       <img src="mursu.jpg" alt="Mursu" class="d-block" style="width:100%">
       <div class="carousel-caption">
         <h3>Mursu</h3>
+        <p>Mursu on suurikokoinen nisäkäs, joka elää arktisen alueen vesialueilla.</p>
         <p>Kuva <a href="https://pixabay.com/fi/users/publicdomainimages-327722/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=387243">PublicDomainImages</a> Pixabaystä</p>
       </div>  
     </div>
@@ -82,6 +84,7 @@
       <img src="naali.jpg" alt="Naali" class="d-block" style="width: 100%">
       <div class="carousel-caption">
         <h3>Naali</h3>
+        <p>Naali on pohjoisella pallonpuoliskolla elävä petoeläin, jota tavataan myös Suomessa.</p>
         <p>Kuva <a href="https://pixabay.com/fi/users/pexels-2286921/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=1850247">Pexels</a> Pixabaystä</p>
       </div>  
     </div>
@@ -104,6 +107,41 @@
 </div>
 <div class="col-md-4"><img id="kuva2" src="lappi.jpg">Kuva <a href="https://pixabay.com/fi/users/aileino-1030590/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=993002">AI Leino</a> Pixabaystä</div>
 </div> 
+</div>
+<!--Kortit-->
+<div class="card-group">
+  <div class="card">
+    <img src="lapintiira.jpg" class="card-img-top" alt="lapintiira">
+    <div class="card-body">
+      <h5 class="card-title">Lapintiira</h5>
+      <p class="card-text">Lapintiira on lintu, joka pesii arktisella ja kylmällä vyöhykkeellä pohjoisella pallonpuoliskolla, mutta talvehtii Etelämannerta ympäröivillä merialueilla. Sen vuosittaiset muuttomatkat ovat eläinkunnan pisimmät.</p>
+      <p class="card-text"><small class="text-body-secondary">Kuva <a href="https://pixabay.com/fi/users/naturfreund_pics-10582885/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=3875483">Mario</a> Pixabaystä</a></small></p>
+    </div>
+  </div>
+  <div class="card">
+    <img src="tunturipollo.jpg" class="card-img-top" alt="Tunturipöllö">
+    <div class="card-body">
+      <h5 class="card-title">Tunturipöllö</h5>
+      <p class="card-text">Tunturipöllö on pohjoisella tundravyöhykkeellä tavattava suurikokoinen pöllölaji. Maailmanlaajuisesti tunturipöllö on uhanalainen, ja Suomesta ja Skandinaviasta se on miltei hävinnyt.</p>
+      <p class="card-text"><small class="text-body-secondary">Kuva <a href="https://pixabay.com/fi/users/minka2507-3728206/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=3767243">minka2507</a> Pixabaystä</small></p>
+    </div>
+  </div>
+  <div class="card">
+    <img src="kiiruna.jpg" class="card-img-top" alt="Kiiruna">
+    <div class="card-body">
+      <h5 class="card-title">Kiiruna</h5>
+      <p class="card-text">Kiiruna elää Euraasian ja Pohjois-Amerikan pohjoisimmissa osissa, Islannissa, Grönlannissa sekä Jäämeren pohjoisilla saarilla. Pohjoisten alueiden lisäksi Kiirunaa voi tavata Alpeilla ja Pyreneillä.</p>
+      <p class="card-text"><small class="text-body-secondary">Kuva <a href="https://pixabay.com/fi/users/rottonara-596655/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=4943115">Mario</a> Pixabaystä</small></p>
+    </div>
+  </div>
+  <div class="card">
+    <img src="lunni.jpg" class="card-img-top" alt="Lunni">
+    <div class="card-body">
+      <h5 class="card-title">Lunni</h5>
+      <p class="card-text">Lunnit pesivät Pohjois-Euroopassa Atlantin ja Jäämeren rannikoilla, Islannissa, Grönlannin rannikolla ja Pohjois-Amerikan itärannikolla. Se on pelaginen merilintu, joka elää pääasiassa kalalla.</p>
+      <p class="card-text"><small class="text-body-secondary">Kuva <a href="https://pixabay.com/fi/users/aidansemmens-5096137/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=7948712">Aidan Semmens</a> Pixabaystä</small></p>
+    </div>
+  </div>
 </div>
 <!--Palautelomake-->
 <div class="poppins-regular">
