--- a/index.html
+++ b/index.html
@@ -27,13 +27,17 @@
         <li class="nav-item">
           <a class="nav-link" href="#arktis">Arktis</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#linnut">Linnut</a>
+        </li>
+        
         <!--alasvetovalikko-->
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Dropdown</a>
+          <a class="nav-link dropdown-toggle" href="#valaat" role="button" data-bs-toggle="dropdown">Valaat</a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Link</a></li>
-            <li><a class="dropdown-item" href="#">Another link</a></li>
-            <li><a class="dropdown-item" href="#">A third link</a></li>
+            <li><a class="dropdown-item" href="#valas1">Grönlanninvalas</a></li>
+            <li><a class="dropdown-item" href="#valas2">Sarvivalas</a></li>
+            <li><a class="dropdown-item" href="#valas3">Maitovalas</a></li>
           </ul>
         </li>
         <li class="nav-item">
@@ -59,9 +63,9 @@
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img src="polarbear.jpg" alt="Jääkarhu" class="d-block" style="width:100%">
-      <div class="carousel-caption">
+      <div class="carousel-caption poppins-regular">
         <h3>Jääkarhu</h3>
-        <p>Tämä arktisen aleen karhulaji on sopeutunut elämään äärimmäisen kylmissä olosuhteissa.</p>
+        <p class="poppins-regular">Tämä arktisen aleen karhulaji on sopeutunut elämään äärimmäisen kylmissä olosuhteissa.</p>
         <p>Kuva <a href="https://pixabay.com/fi/users/pascalphotography360-22728048/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=9156395">Pascal Arnould</a> Pixabaystä</p>
       </div>
     </div>
@@ -69,14 +73,15 @@
       <img src="penquin.jpg" alt="Pingviini" class="d-block" style="width:100%">
       <div class="carousel-caption">
         <h3>Pingviini</h3>
-        <p>Kuva: Kuva <a href="https://pixabay.com/fi/users/theotherkev-9436196/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=4337057">Kev</a> Pixabaystä</p>
+        <p class ="poppins-regular">Useimmat pingviinilajit ovat eteläisen lauhkean ilmastovyöhykkeen lintuja, mutta jotkin elävät koko ikänsä Etelämantereella ja sen rannikkovesissä.</p>
+        <p class="poppins-regular"> Kuva <a href="https://pixabay.com/fi/users/theotherkev-9436196/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=4337057">Kev</a> Pixabaystä</p>
       </div> 
     </div>
     <div class="carousel-item">
       <img src="mursu.jpg" alt="Mursu" class="d-block" style="width:100%">
       <div class="carousel-caption">
         <h3>Mursu</h3>
-        <p>Mursu on suurikokoinen nisäkäs, joka elää arktisen alueen vesialueilla.</p>
+        <p class="poppins-regular">Mursu on suurikokoinen nisäkäs, joka elää arktisen alueen vesialueilla.</p>
         <p>Kuva <a href="https://pixabay.com/fi/users/publicdomainimages-327722/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=387243">PublicDomainImages</a> Pixabaystä</p>
       </div>  
     </div>
@@ -84,7 +89,7 @@
       <img src="naali.jpg" alt="Naali" class="d-block" style="width: 100%">
       <div class="carousel-caption">
         <h3>Naali</h3>
-        <p>Naali on pohjoisella pallonpuoliskolla elävä petoeläin, jota tavataan myös Suomessa.</p>
+        <p class="poppins-regular">Naali on pohjoisella pallonpuoliskolla elävä petoeläin, jota tavataan myös Suomessa.</p>
         <p>Kuva <a href="https://pixabay.com/fi/users/pexels-2286921/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=1850247">Pexels</a> Pixabaystä</p>
       </div>  
     </div>
@@ -103,14 +108,14 @@
 <div class="container poppins-regular" id="arktis">    
 <div class="row">
 <div class="col-md-4 poppins-extralight"><img id="kuva1" src="maisema1.jpg">Kuva <a href="https://pixabay.com/fi/users/per804-874554/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=5126442">Per Løvstad</a> Pixabaystä</div>
-<div class="col-md-4"><p>Arktinen alue eli Arktis tarkoittaa maapallon pohjoisimpia alueita. Tavallisesti arktiseen alueeseen katsotaan kuuluvan pohjoisnapaa ympäröivä Pohjoinen jäämeri ja osia Kanadasta, Grönlannista, Venäjästä, Alaskasta ja Pohjoismaista.</p>
+<div class="col-md-4" ><p class="poppins-regular">Arktinen alue eli Arktis tarkoittaa maapallon pohjoisimpia alueita. Tavallisesti arktiseen alueeseen katsotaan kuuluvan pohjoisnapaa ympäröivä Pohjoinen jäämeri ja osia Kanadasta, Grönlannista, Venäjästä, Alaskasta ja Pohjoismaista.</p>
 </div>
-<div class="col-md-4"><img id="kuva2" src="lappi.jpg">Kuva <a href="https://pixabay.com/fi/users/aileino-1030590/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=993002">AI Leino</a> Pixabaystä</div>
+<div class="col-md-4 poppins-extralight"><img id="kuva2" src="lappi.jpg">Kuva <a href="https://pixabay.com/fi/users/aileino-1030590/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=993002">AI Leino</a> Pixabaystä</div>
 </div> 
 </div>
 <!--Kortit-->
-<div class="card-group">
-  <div class="card">
+<div class="card-group" id="linnut">
+  <div class="card poppins-regular">
     <img src="lapintiira.jpg" class="card-img-top" alt="lapintiira">
     <div class="card-body">
       <h5 class="card-title">Lapintiira</h5>
@@ -118,32 +123,97 @@
       <p class="card-text"><small class="text-body-secondary">Kuva <a href="https://pixabay.com/fi/users/naturfreund_pics-10582885/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=3875483">Mario</a> Pixabaystä</a></small></p>
     </div>
   </div>
-  <div class="card">
+  <div class="card poppins-regular">
     <img src="tunturipollo.jpg" class="card-img-top" alt="Tunturipöllö">
     <div class="card-body">
       <h5 class="card-title">Tunturipöllö</h5>
-      <p class="card-text">Tunturipöllö on pohjoisella tundravyöhykkeellä tavattava suurikokoinen pöllölaji. Maailmanlaajuisesti tunturipöllö on uhanalainen, ja Suomesta ja Skandinaviasta se on miltei hävinnyt.</p>
-      <p class="card-text"><small class="text-body-secondary">Kuva <a href="https://pixabay.com/fi/users/minka2507-3728206/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=3767243">minka2507</a> Pixabaystä</small></p>
+      <p class="card-text poppins-regular">Tunturipöllö on pohjoisella tundravyöhykkeellä tavattava suurikokoinen pöllölaji. Maailmanlaajuisesti tunturipöllö on uhanalainen, ja Suomesta ja Skandinaviasta se on miltei hävinnyt.</p>
+      <p class="card-text poppins-regular"><small class="text-body-secondary">Kuva <a href="https://pixabay.com/fi/users/minka2507-3728206/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=3767243">minka2507</a> Pixabaystä</small></p>
     </div>
   </div>
-  <div class="card">
+  <div class="card ">
     <img src="kiiruna.jpg" class="card-img-top" alt="Kiiruna">
-    <div class="card-body">
+    <div class="card-body poppins-regular">
       <h5 class="card-title">Kiiruna</h5>
-      <p class="card-text">Kiiruna elää Euraasian ja Pohjois-Amerikan pohjoisimmissa osissa, Islannissa, Grönlannissa sekä Jäämeren pohjoisilla saarilla. Pohjoisten alueiden lisäksi Kiirunaa voi tavata Alpeilla ja Pyreneillä.</p>
-      <p class="card-text"><small class="text-body-secondary">Kuva <a href="https://pixabay.com/fi/users/rottonara-596655/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=4943115">Mario</a> Pixabaystä</small></p>
+      <p class="card-text poppins-regular">Kiiruna elää Euraasian ja Pohjois-Amerikan pohjoisimmissa osissa, Islannissa, Grönlannissa sekä Jäämeren pohjoisilla saarilla. Pohjoisten alueiden lisäksi Kiirunaa voi tavata Alpeilla ja Pyreneillä.</p>
+      <p class="card-text poppins-regular"><small class="text-body-secondary">Kuva <a href="https://pixabay.com/fi/users/rottonara-596655/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=4943115">Mario</a> Pixabaystä</small></p>
     </div>
   </div>
   <div class="card">
     <img src="lunni.jpg" class="card-img-top" alt="Lunni">
     <div class="card-body">
       <h5 class="card-title">Lunni</h5>
-      <p class="card-text">Lunnit pesivät Pohjois-Euroopassa Atlantin ja Jäämeren rannikoilla, Islannissa, Grönlannin rannikolla ja Pohjois-Amerikan itärannikolla. Se on pelaginen merilintu, joka elää pääasiassa kalalla.</p>
-      <p class="card-text"><small class="text-body-secondary">Kuva <a href="https://pixabay.com/fi/users/aidansemmens-5096137/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=7948712">Aidan Semmens</a> Pixabaystä</small></p>
+      <p class="card-text poppins-regular">Lunnit pesivät Pohjois-Euroopassa Atlantin ja Jäämeren rannikoilla, Islannissa, Grönlannin rannikolla ja Pohjois-Amerikan itärannikolla. Se on pelaginen merilintu, joka elää pääasiassa kalalla.</p>
+      <p class="card-text poppins-regular"><small class="text-body-secondary">Kuva <a href="https://pixabay.com/fi/users/aidansemmens-5096137/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=7948712">Aidan Semmens</a> Pixabaystä</small></p>
     </div>
   </div>
 </div>
+
+<!--haitari-->
+<div class="accordion poppins-regular" id="valaat">
+  <div class="accordion-item" id="valaat">
+    <h2 class="accordion-header">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#valas1" aria-expanded="false" aria-controls="collapseOne">
+        Grönlanninvalas
+      </button>
+    </h2>
+    <div id="valas1" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+      <div class="accordion-body" >
+        <strong>Grönlanninvalas</strong> on ainoa hetulavalas, joka elää koko elämänsä arktisilla merialueilla. Niillä on vahva kallo, jolla ne pystyvät rikkomaan jopa 20 senttiä paksun jään päästäkseen pinnalle hengittämään. Grönlanninvalas voi elää yli 200 vuotiaiksi ja se on myös maailman toiseksi painavin eläin, ja sinivalaan ohella ainoa, jonka suurimmat yksilöt voivat painaa toistasataa tonnia. 
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#valas2" aria-expanded="false" aria-controls="collapseTwo">
+        Sarvivalas
+      </button>
+    </h2>
+    <div id="valas2" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        <strong>Sarvivalas</strong> on pohjoisilla merialueilla, pääasiassa pohjoisen napapiirin pohjoispuolella, elävä valaslaji. Ne elävät jäätiköiden lähellä ja napajäätiköiden avoimissa kohdissa. <br>
+Sarvivalaan näkyvin tuntomerkki on koiraiden kierteinen syöksyhammas, joka on yleensä noin kaksi metriä. Hammas voi painaa jopa 10 kiloa, mikä on tehnyt sarvivalaasta halutun metsästyskohteen.
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#valas3" aria-expanded="false" aria-controls="collapseThree">
+        Maitovalas
+      </button>
+    </h2>
+    <div id="valas3" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        <div class="haitariteksti"><strong>Maitovalaita</strong> tavataan pääasiassa Pohjoisella jäämerellä, joskus kuitenkin lämpimilläkin vesillä, Pohjois-Amerikan itärannikolla ja Japanin edustalla. Kääntyvän pään vuoksi maitovalas voi uida valaaksi varsin matalassakin vedessä. Toisaalta sitä on tavattu jopa yli kilometrin syvyydessä, ja se voi olla sukelluksissa jopa 30 minuuttia. </div>
+        <div><img src="beluga.jpg" class="haitarikuvat">Kuva <a href="https://pixabay.com/fi/users/mjimages-10627284/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=6008844">Melissa</a> Pixabaystä</div>
+    </div>
+  </div>
+</div>
+<div>
+  <ul class="nav justify-content-center">
+  <li class="nav-item">
+    <a class="nav-link active" aria-current="page" href="#">active</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">Link</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">Link</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+  </li>
+</ul>
+</div>
+<div class="tab-content">
+  <div class="tab-pane container active" id="home">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/COk0Sbbc_co?si=RDVB1gB0g95K3FpL" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+  </div>
+  <div class="tab-pane container fade" id="menu1">...</div>
+  <div class="tab-pane container fade" id="menu2">...</div>
+</div>
 <!--Palautelomake-->
+<div class="lomake">
 <div class="poppins-regular">
   <form onsubmit="return false">
   <label for ="nimi">Nimi:</label><br>
@@ -189,7 +259,9 @@
 
 <input type="submit" value="Lähetä" onclick="lomake()">
 </form>
+<div class="vastaus">
   <div id="vastaus"></div>
+</div>
 </div>
 
 
