--- a/index.html
+++ b/index.html
@@ -157,10 +157,12 @@
         Grönlanninvalas
       </button>
     </h2>
-    <div id="valas1" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-      <div class="accordion-body" >
-        <strong>Grönlanninvalas</strong> on ainoa hetulavalas, joka elää koko elämänsä arktisilla merialueilla. Niillä on vahva kallo, jolla ne pystyvät rikkomaan jopa 20 senttiä paksun jään päästäkseen pinnalle hengittämään. Grönlanninvalas voi elää yli 200 vuotiaiksi ja se on myös maailman toiseksi painavin eläin, ja sinivalaan ohella ainoa, jonka suurimmat yksilöt voivat painaa toistasataa tonnia. 
-      </div>
+    <div id="valas1" class="accordion-collapse collapse container-fluid" data-bs-parent="#accordionExample">
+      <div class="accordion-body row" >
+        <div class="col-md-8"><strong>Grönlanninvalas</strong> on ainoa hetulavalas, joka elää koko elämänsä arktisilla merialueilla. Niillä on vahva kallo, jolla ne pystyvät rikkomaan jopa 20 senttiä paksun jään päästäkseen pinnalle hengittämään. Grönlanninvalas voi elää yli 200 vuotiaiksi ja se on myös maailman toiseksi painavin eläin, ja sinivalaan ohella ainoa, jonka suurimmat yksilöt voivat painaa toistasataa tonnia. 
+        </div>
+        <div class="col-md-4 poppins-extralight"><img src="whale.png" class="img-fluid" alt="grönlanninvalas"><a href="https://commons.wikimedia.org/wiki/File:Bowhead_whale_size.svg"><br>Chris huh</a>, <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC BY-SA 3.0</a>, via Wikimedia Commons</div>
+        </div>
     </div>
   </div>
   <div class="accordion-item">
@@ -169,10 +171,11 @@
         Sarvivalas
       </button>
     </h2>
-    <div id="valas2" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-      <div class="accordion-body">
-        <strong>Sarvivalas</strong> on pohjoisilla merialueilla, pääasiassa pohjoisen napapiirin pohjoispuolella, elävä valaslaji. Ne elävät jäätiköiden lähellä ja napajäätiköiden avoimissa kohdissa. <br>
-Sarvivalaan näkyvin tuntomerkki on koiraiden kierteinen syöksyhammas, joka on yleensä noin kaksi metriä. Hammas voi painaa jopa 10 kiloa, mikä on tehnyt sarvivalaasta halutun metsästyskohteen.
+    <div id="valas2" class="accordion-collapse collapse container-fluid" data-bs-parent="#accordionExample">
+      <div class="accordion-body row">
+        <div class="col-md-4 poppins-extralight"><img src="narwal.jpg" class="img-fluid" alt="maitovalas"><a href="https://commons.wikimedia.org/wiki/File:%D0%9D%D0%B0%D1%80%D0%B2%D0%B0%D0%BB_%D0%B2_%D1%80%D0%BE%D1%81%D1%81%D0%B8%D0%B9%D1%81%D0%BA%D0%BE%D0%B9_%D0%90%D1%80%D0%BA%D1%82%D0%B8%D0%BA%D0%B5.jpg">пресс-служба ПАО &quot;Газпром нефть&quot;</a>, <a href="https://creativecommons.org/licenses/by-sa/4.0">CC BY-SA 4.0</a>, via Wikimedia Commons</div>
+        <div class="col-md-8"><strong>Sarvivalas</strong> on pohjoisilla merialueilla, pääasiassa pohjoisen napapiirin pohjoispuolella, elävä valaslaji. Ne elävät jäätiköiden lähellä ja napajäätiköiden avoimissa kohdissa. <br>
+Sarvivalaan näkyvin tuntomerkki on koiraiden kierteinen syöksyhammas, joka on yleensä noin kaksi metriä. Hammas voi painaa jopa 10 kiloa, mikä on tehnyt sarvivalaasta halutun metsästyskohteen.</div>
       </div>
     </div>
   </div>
@@ -182,10 +185,10 @@ Sarvivalaan näkyvin tuntomerkki on koiraiden kierteinen syöksyhammas, joka on 
         Maitovalas
       </button>
     </h2>
-    <div id="valas3" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-      <div class="accordion-body">
-        <div class="haitariteksti"><strong>Maitovalaita</strong> tavataan pääasiassa Pohjoisella jäämerellä, joskus kuitenkin lämpimilläkin vesillä, Pohjois-Amerikan itärannikolla ja Japanin edustalla. Kääntyvän pään vuoksi maitovalas voi uida valaaksi varsin matalassakin vedessä. Toisaalta sitä on tavattu jopa yli kilometrin syvyydessä, ja se voi olla sukelluksissa jopa 30 minuuttia. </div>
-        <div><img src="beluga.jpg" class="haitarikuvat">Kuva <a href="https://pixabay.com/fi/users/mjimages-10627284/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=6008844">Melissa</a> Pixabaystä</div>
+    <div id="valas3" class="accordion-collapse collapse container-fluid" data-bs-parent="#accordionExample">
+      <div class="accordion-body row">
+        <div class="col-md-8 haitariteksti"><strong>Maitovalaita</strong> tavataan pääasiassa Pohjoisella jäämerellä, joskus kuitenkin lämpimilläkin vesillä, Pohjois-Amerikan itärannikolla ja Japanin edustalla. Kääntyvän pään vuoksi maitovalas voi uida valaaksi varsin matalassakin vedessä. Toisaalta sitä on tavattu jopa yli kilometrin syvyydessä, ja se voi olla sukelluksissa jopa 30 minuuttia. </div>
+        <div class="col-md-4 haitarikuvat poppins-extralight"><img src="beluga.jpg" class="img-fluid" alt="maitovalas"><br>Kuva <a href="https://pixabay.com/fi/users/mjimages-10627284/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=6008844">Melissa</a> Pixabaystä</div>
     </div>
   </div>
 </div>
