--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link" href="#videoita">Videoita</a>
         </li>  
       </ul>
     </div>
@@ -192,29 +192,35 @@ Sarvivalaan näkyvin tuntomerkki on koiraiden kierteinen syöksyhammas, joka on 
     </div>
   </div>
 </div>
-<div>
-  <ul class="nav justify-content-center">
+
+<!--välilehdet-->
+<ul class="nav nav-tabs">
   <li class="nav-item">
-    <a class="nav-link active" aria-current="page" href="#">active</a>
+    <a class="nav-link active" data-bs-toggle="tab" href="#home">home</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">Link</a>
+    <a class="nav-link" data-bs-toggle="tab" href="#menu1">Menu 1</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">Link</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+    <a class="nav-link" data-bs-toggle="tab" href="#menu2">Menu 2</a>
   </li>
 </ul>
-</div>
+
+<!-- Tab panes -->
 <div class="tab-content">
   <div class="tab-pane container active" id="home">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/COk0Sbbc_co?si=RDVB1gB0g95K3FpL" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <div class="ratio ratio-16x9">
+      <iframe src="https://www.youtube.com/embed/cTQ3Ko9ZKg8?si=NV20ZhW97mJI12Pt" title="YouTube video" allowfullscreen></iframe>
+    </div>
   </div>
-  <div class="tab-pane container fade" id="menu1">...</div>
-  <div class="tab-pane container fade" id="menu2">...</div>
+  <div class="tab-pane container fade" id="menu1">
+    
+  </div>
+  <div class="tab-pane container fade" id="menu2">
+    
+  </div>
 </div>
+
 <!--Palautelomake-->
 <div class="lomake">
 <div class="poppins-regular">
