--- a/index.html
+++ b/index.html
@@ -196,28 +196,32 @@ Sarvivalaan näkyvin tuntomerkki on koiraiden kierteinen syöksyhammas, joka on 
 <!--välilehdet-->
 <ul class="nav nav-tabs">
   <li class="nav-item">
-    <a class="nav-link active" data-bs-toggle="tab" href="#home">home</a>
+    <a class="nav-link active" data-bs-toggle="tab" href="#video1">Pohjoisen linnut</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" data-bs-toggle="tab" href="#menu1">Menu 1</a>
+    <a class="nav-link" data-bs-toggle="tab" href="#video2">Jääkarhut</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" data-bs-toggle="tab" href="#menu2">Menu 2</a>
+    <a class="nav-link" data-bs-toggle="tab" href="#video3">Pohjoisen meren asukkaat</a>
   </li>
 </ul>
 
 <!-- Tab panes -->
 <div class="tab-content">
-  <div class="tab-pane container active" id="home">
+  <div class="tab-pane container active" id="video1">
     <div class="ratio ratio-16x9">
-      <iframe src="https://www.youtube.com/embed/cTQ3Ko9ZKg8?si=NV20ZhW97mJI12Pt" title="YouTube video" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/9d3VlQsLZnE?si=qxX7ayDlSA5xbpqH" title="YouTube video" allowfullscreen></iframe>
     </div>
   </div>
-  <div class="tab-pane container fade" id="menu1">
-    
+  <div class="tab-pane container fade" id="video2">
+    <div class="ratio ratio-16x9">
+      <iframe src="https://www.youtube.com/embed/D6_e6yKH26Q?si=E-k_e-kXCl1DUtsR" title="YouTube video" allowfullscreen></iframe>
+    </div>
   </div>
-  <div class="tab-pane container fade" id="menu2">
-    
+  <div class="tab-pane container fade" id="video3">
+    <div class="ratio ratio-16x9">
+      <iframe src="https://www.youtube.com/embed/Ceww6yLijFc?si=e0CZge-iBA4gs3DK" title="YouTube video" allowfullscreen></iframe>
+    </div>
   </div>
 </div>
 
