--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ Sarvivalaan näkyvin tuntomerkki on koiraiden kierteinen syöksyhammas, joka on 
 </ul>
 
 <!-- Tab panes -->
-<div class="tab-content">
+<div class="tab-content" id="videoita">
   <div class="tab-pane container active" id="video1">
     <div class="ratio ratio-16x9">
       <iframe src="https://www.youtube.com/embed/9d3VlQsLZnE?si=qxX7ayDlSA5xbpqH" title="YouTube video" allowfullscreen></iframe>
@@ -224,6 +224,38 @@ Sarvivalaan näkyvin tuntomerkki on koiraiden kierteinen syöksyhammas, joka on 
     </div>
   </div>
 </div>
+
+<div class="container mt-3" id="taulukko">
+  <h2>Lajien elinvoimaisuus</h2>
+  <p>Ilmastonmuutoksen myötä pohjoiset jääalueet ovat alkaneet sulamaan ja kylmien alueiden eläinlajien elialueat pienenevät. Allaolevassa taulukossa näet lajien tämän hetkisen tilanteen. </p>            
+  <table class="table table-hover">
+    <thead>
+      <tr>
+        <th>Eläinlaji</th>
+        <th>Elinvoimaisuus</th>
+        <th>Luonnossa eläviä yksilöitä</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>John</td>
+        <td>Doe</td>
+        <td>john@example.com</td>
+      </tr>
+      <tr>
+        <td>Mary</td>
+        <td>Moe</td>
+        <td>mary@example.com</td>
+      </tr>
+      <tr>
+        <td>July</td>
+        <td>Dooley</td>
+        <td>july@example.com</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+
 
 <!--Palautelomake-->
 <div class="lomake">
