--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ Sarvivalaan näkyvin tuntomerkki on koiraiden kierteinen syöksyhammas, joka on 
 <!--Palautelomake-->
 <div class="formi container-fluid">
   <h2 id="lomakkeenOtsikko">Anna palautetta sivustosta</h2>
-<div class="poppins-regular row grid">
+<div class="poppins-regular row justify-content-center">
   <form onsubmit="return false" class="col-md-4 lomake m-4">
   <label for ="nimi">Nimi:</label><br>
 <input type="text" id="nimi" size="20" required maxlength="50"><br>
