--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <div class="carousel-caption poppins-regular">
         <h3>Jääkarhu</h3>
         <p class="poppins-regular">Tämä arktisen aleen karhulaji on sopeutunut elämään äärimmäisen kylmissä olosuhteissa.</p>
-        <p>Kuva <a href="https://pixabay.com/fi/users/pascalphotography360-22728048/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=9156395">Pascal Arnould</a> Pixabaystä</p>
+        <p class="kuvaaja poppins-extralight">Kuva <a href="https://pixabay.com/fi/users/pascalphotography360-22728048/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=9156395">Pascal Arnould</a> Pixabaystä</p>
       </div>
     </div>
     <div class="carousel-item">
@@ -77,7 +77,7 @@
       <div class="carousel-caption">
         <h3>Pingviini</h3>
         <p class ="poppins-regular">Useimmat pingviinilajit ovat eteläisen lauhkean ilmastovyöhykkeen lintuja, mutta jotkin elävät koko ikänsä Etelämantereella ja sen rannikkovesissä.</p>
-        <p class="poppins-regular"> Kuva <a href="https://pixabay.com/fi/users/theotherkev-9436196/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=4337057">Kev</a> Pixabaystä</p>
+        <p class="kuvaaja poppins-extralight">Kuva <a href="https://pixabay.com/fi/users/theotherkev-9436196/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=4337057">Kev</a> Pixabaystä</p>
       </div> 
     </div>
     <div class="carousel-item">
@@ -85,7 +85,7 @@
       <div class="carousel-caption">
         <h3>Mursu</h3>
         <p class="poppins-regular">Mursu on suurikokoinen nisäkäs, joka elää arktisen alueen vesialueilla.</p>
-        <p>Kuva <a href="https://pixabay.com/fi/users/publicdomainimages-327722/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=387243">PublicDomainImages</a> Pixabaystä</p>
+        <p class="kuvaaja poppins-extralight">Kuva <a href="https://pixabay.com/fi/users/publicdomainimages-327722/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=387243">PublicDomainImages</a> Pixabaystä</p>
       </div>  
     </div>
     <div class="carousel-item">
@@ -93,7 +93,7 @@
       <div class="carousel-caption">
         <h3>Naali</h3>
         <p class="poppins-regular">Naali on pohjoisella pallonpuoliskolla elävä petoeläin, jota tavataan myös Suomessa.</p>
-        <p>Kuva <a href="https://pixabay.com/fi/users/pexels-2286921/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=1850247">Pexels</a> Pixabaystä</p>
+        <p class="kuvaaja poppins-extralight">Kuva <a href="https://pixabay.com/fi/users/pexels-2286921/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=1850247">Pexels</a> Pixabaystä</p>
       </div>  
     </div>
   </div>
@@ -291,11 +291,12 @@ Sarvivalaan näkyvin tuntomerkki on koiraiden kierteinen syöksyhammas, joka on 
   <input type="checkbox"  name="tama" value="kiinnostavaa">Kiinnostavaa
 </label><br>
 <label>
-  <input type="checkbox"  name="tama" value="tylsää">Tylsää
+  <input type="checkbox"  name="tama" value="tylsää">Olipa tylsä
 </label><br>
 <label>
-  <input type="checkbox"  name="tama" value="muuta">Jotain muuta
+  <input type="checkbox"  name="tama" value="muuta">Ei herätä ajatuksia
 </label>
+<br>
 <!--Alasvetovalikko-->
 <div><strong>Löysitkö etsimäsi:</strong></div>
 <select id="tieto">
