--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@ Sarvivalaan näkyvin tuntomerkki on koiraiden kierteinen syöksyhammas, joka on 
 <input type="submit" value="Lähetä" onclick="lomake()">
 </form>
 <div class="vastaus col-md-4 m-4 align-items-center d-flex justify-content-center placeholder-box">
-  <div id="vastaus"></div>
+  <div><div id="vastaus"></div><img class="loppuLogo" src="logo.jpeg"></div>
 </div>
 </div>
 
