--- a/index.html
+++ b/index.html
@@ -291,7 +291,10 @@ Sarvivalaan näkyvin tuntomerkki on koiraiden kierteinen syöksyhammas, joka on 
   <input type="checkbox"  name="tama" value="kiinnostavaa">Kiinnostavaa
 </label><br>
 <label>
-  <input type="checkbox"  name="tama" value="tylsää">Olipa tylsä
+  <input type="checkbox"  name="tama" value="epailyttavaa">Epäilyttävää
+</label><br>
+<label>
+  <input type="checkbox"  name="tama" value="inspiroivaa">Inspiroivaa
 </label><br>
 <label>
   <input type="checkbox"  name="tama" value="muuta">Ei herätä ajatuksia
